[gd_scene load_steps=2 format=3 uid="uid://bg73e0287m8u6"]

[ext_resource type="Script" path="res://Scenes/LevelWinSummary/level_win_summary.gd" id="1_ake3q"]

[node name="LevelWinSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ake3q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.151146, 0.308725, 0.304382, 1)

[node name="LevelWinLabel" type="Label" parent="."]
layout_mode = 2
offset_top = 17.0
offset_right = 160.0
offset_bottom = 22.0
text = "LEVEL 1 COMPLETE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 33.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
metadata/_edit_group_ = true

[node name="NextLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"
